--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "joi": "^17.2.1"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "jest": "^26.4.2",
+    "prettier": "2.1.2",
     "supertest": "^4.0.2"
   }
 }
