--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
-  "name": "nexpress",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "@donfour/nexpress",
+  "version": "0.0.1",
+  "description": "An Express middleware that turns your file directories into API endpoints",
+  "main": "src/index.js",
   "scripts": {
     "test": "jest"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Donovan So",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/donfour/nexpress"
+  },
   "dependencies": {
-    "body-parser": "^1.19.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "body-parser": "^1.19.0",
     "jest": "^26.4.2",
     "prettier": "2.1.2",
     "supertest": "^4.0.2"
